  * Transitioned to the native C complex type for the various C extensions
  * Added better support VDIF files in the lsl.reader.vdif module
  * Added a ring buffer for VDIF files to the lsl.reader.buffer module
  * Added support for single tuning beam SDFs
  * Fixed a couple of bugs that caused FITS IDI files to have invalid uvw coordinates

1.1.1
  * Fixed a bug in the lsl.statistics.robust.checkfit function
  * Fixed a few modules that caused problems with automatic recasting in newer versions of NumPy
  * Cleaned up the lsl.misc.dedispersion.delay() function so that it will work with lists of single frequency values
  * Small fix to the lsl.imaging.selfCal module to make it more robust when not all antennas are present
  * Updated the updateLSLSSMIF.py script to use the new LWA1 SSMIF location on the archive
  * Added new ionosphere model sources to the lsl.misc.ionosphere module
  * Changed the disk caching to lsl.misc.ionosphere to store only gzipped files
  * Added options for other model sources to getIonosphericRM.py
  * Fixed a bug in correlateTBW.py/correlateTBN.py that causes the script to usually write out an Extended IDI file
  * Fixed a bug in splitSession.py that caused the script to crash
  * Updated the various FITS-based writers to remove the old PyFITS API that is no longer supported

1.1.0
  * Updated the lsl.imaging.deconv module to include a source-based CLEAN method and a forward-modeling/least squares method
  * Added support for phase centers other than zenith to the various functions in lsl.imaging.overlay
  * Added support for determining coordinates for images with phase centers other than zenith to the lsl.imaging.utils module
  * Added a new image analysis module, lsl.imaging.analysis, that allows one to find point sources in a 2-D image
  * Added backward compatibility for older metadata tarball formats to the lsl.common.metabundle module (Ticket #61)